--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Bolt Food Demo</string>
+    <string name="order_again">Order Again</string>
+    <string name="all">All</string>
+    <string name="explore_all_places">Explore all places</string>
 </resources>
